fix: revert find+replace error

--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
         			<option value="Vulnerable">Vulnerable</option>
         		</select>
         		<br>
-            	<label for="neuro-sectionersity">Neuro-sectionersity:</label>
-        		<select name="Neuro-sectionersity" id="neuro-sectionersity">
+            	<label for="neuro-diversity">Neuro-diversity:</label>
+        		<select name="Neuro-diversity" id="neuro-diversity">
         			<option value="Neuro-typical">Neuro-typical</option>
-        			<option value="Some Neuro-sectionergence" selected>Some Neuro-sectionergence</option>
-        			<option value="Multiply Neuro-sectionergent">Multiply Neuro-sectionergent</option>
+        			<option value="Some Neuro-divergence" selected>Some Neuro-divergence</option>
+        			<option value="Multiply Neuro-divergent">Multiply Neuro-divergent</option>
         		</select>
         		<br>
             	<label for="body size">Body size:</label>
@@ -181,7 +181,7 @@
             'Funding/Resources': {'High':1,'Medium':0,'None / Very Low':-1},
             'Career Stage': {'Late Career':1,'Mid Career':0,'Early Career':-1},
             'Mental Health': {'Robust':1,'Mostly Stable':0,'Vulnerable':-1},
-            'Neuro-sectionersity': {'Neuro-typical':1,'Some Neuro-sectionergence':0,'Multiply Neuro-sectionergent':-1},
+            'Neuro-diversity': {'Neuro-typical':1,'Some Neuro-divergence':0,'Multiply Neuro-divergent':-1},
             'Body size': {'Slim':1,'Average':0,'Large':-1},
             '(Dis)ability': {'Able-bodied':1,'Some Disability':0,'Multiply Disabled':-1},
             'Childhood Household Wealth': {'Rich':1,'Middle Class':0,'Poor':-1},
